Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-hello world
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="./index.css"/>
+      <!-- <link rel="stylesheet" type="text/css" href="//static.yyimg.com/ant-design/test/index.css"/> -->
+
+    <!--[if lt IE 10]>
+    <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
+    <![endif]-->
+    <style>
+    #header-wrapper {
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  background-color: #38bbe1;
+  padding: 0 20px;
+}
+#sidebar-wrapper {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 240px;
+    bottom: 0;
+    background: #f2f2f2;
+    padding: 0px 0px;
+    z-index: 2;
+    transition: all cubic-bezier(.645,.045,.355,1) .4s;
+}
+#content-wrapper {
+    min-height: 100%;
+    padding: 60px 20px 0 230px;
+    transition: padding-left cubic-bezier(.645,.045,.355,1) .4s;
+    position: relative;
+    z-index: 1;
+}
+
+    </style>
+</head>
+<body>
+  <div id="header-wrapper"></div>
+  <div id="sidebar-wrapper">  <div style="" id="MENU"></div></div>
+  <div id="content-wrapper"><div style="margin-top:5px;margin-left:15px" id="react-content"></div></div>
+
+
+</body>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="./common.js"></script>
+<script src="./index.js"></script>
+
+<!-- <script src="//static.yyimg.com/ant-design/test/common.js"></script>
+<script src="//static.yyimg.com/ant-design/test/index.js"></script> -->
+</html>
+<script>
+
+</script>
