Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Laiwenqi.GitHub.io by laiwenqi</title>
+    <title>laiwenqi.GitHub.io by laiwenqi</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Laiwenqi.GitHub.io</h1>
+        <h1>laiwenqi.GitHub.io</h1>
         <h2>ant-react</h2>
         <a href="https://github.com/laiwenqi" class="button"><small>Follow me on</small> GitHub</a>
       </div>
