Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 </body>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="./common.js"></script>
-<script src="./index.js"></script>
+<script src="./dist/common.js"></script>
+<script src="./dist/index.js"></script>
 
 <!-- <script src="//static.yyimg.com/ant-design/test/common.js"></script>
 <script src="//static.yyimg.com/ant-design/test/index.js"></script> -->
