--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="./index.css"/>
+    <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css"/>
       <!-- <link rel="stylesheet" type="text/css" href="//static.yyimg.com/ant-design/test/index.css"/> -->
 
     <!--[if lt IE 10]>
@@ -49,8 +49,8 @@
 
 </body>
 <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="./dist/common.js"></script>
-<script src="./dist/index.js"></script>
+<script src="./dist/production/1.0.0/common.js"></script>
+<script src="./dist/production/1.0.0/index.js"></script>
 
 <!-- <script src="//static.yyimg.com/ant-design/test/common.js"></script>
 <script src="//static.yyimg.com/ant-design/test/index.js"></script> -->
