Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>TEST</title>
+  <title>|</title>
   <link rel="stylesheet" type="text/css" href="./index.css" />
   <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
   <!-- <link rel="stylesheet" type="text/css" href="//static.yyimg.com/ant-design/test/index.css"/> -->
@@ -24,27 +24,3 @@
 </html>
 <script>
 </script>
-
-<!--
-onClick={this.handleClick}
-  style={{ width: 240 }}
-  openKeys={this.state.openKeys}
-  onOpen={this.onToggle}
-  onClose={this.onToggle}
-  selectedKeys={[this.state.current]} -->
-
-
-
-  <!-- <div>
-    {/* //头部 */}
-    <div id="header-wrapper"></div>
-    {/* //左边菜单 S */}
-    <div id="sidebar-wrapper">
-      <div id="menu-wrapper"></div>
-    </div>
-    {/* //左边菜单 E */}
-    {/* //主体 S */}
-    <div id="content-wrapper">
-      <div id="react-content"></div>
-    </div>
-  </div> -->
