--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="./common.js"></script>
-<script src="./index.js"></script>
+<script src="./index.js" charset="UTF-8"></script>
 <!-- <script src="./dist/production/1.0.0/common.js"></script>
 <script src="./dist/production/1.0.0/index.js"></script> -->
 </html>
