--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>|</title>
-  <link rel="stylesheet" type="text/css" href="./index.css" />
+  <link rel="stylesheet" type="text/css" href="./dist/index.css" />
   <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
   <!-- <link rel="stylesheet" type="text/css" href="//static.yyimg.com/ant-design/test/index.css"/> -->
   <!--[if lt IE 10]>
@@ -16,8 +16,8 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="./common.js"></script>
-<script src="./index.js" charset="UTF-8"></script>
+<script src="./dist/common.js"></script>
+<script src="./dist/index.js"></script>
 <!-- <script src="./dist/production/1.0.0/common.js"></script>
 <script src="./dist/production/1.0.0/index.js"></script> -->
 </html>
