--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>|</title>
-  <link rel="stylesheet" type="text/css" href="./index.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
-  <!-- <link rel="stylesheet" type="text/css" href="//static.yyimg.com/ant-design/test/index.css"/> -->
+  <!-- <link rel="stylesheet" type="text/css" href="./index.css" /> -->
+  <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" />
   <!--[if lt IE 10]>
     <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
     <![endif]-->
@@ -16,10 +15,10 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="./common.js"></script>
-<script src="./index.js"></script>
-<!-- <script src="./dist/production/1.0.0/common.js"></script>
-<script src="./dist/production/1.0.0/index.js"></script> -->
+<!-- <script src="./common.js"></script>
+<script src="./index.js"></script> -->
+<script src="./dist/production/1.0.0/common.js"></script>
+<script src="./dist/production/1.0.0/index.js"></script>
 </html>
 <script>
 </script>
