--- a/index.html
+++ b/index.html
@@ -5,20 +5,87 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>|</title>
-  <!-- <link rel="stylesheet" type="text/css" href="./index.css" /> -->
-  <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" />
+  <title>一卡通终端服务支撑平台</title>
+  <link rel="stylesheet" type="text/css" href="./index.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
   <!--[if lt IE 10]>
     <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
     <![endif]-->
 </head>
+<script>
+  var isLogin = 0;
+  var loginUser = 'admin';
+  var jsversion="v=20160416";
+  var cssversion="v=20160416";
+  var defaultShouye=[{
+    'title':'人员管理',
+    'key':1,
+    'content':'employee'
+  }];
+  var mainMenu= [{
+    'key': 'sub1',
+    'title': '系统管理',
+    'icon': 'laptop',
+    'contain': [{
+      'name': '人员管理',
+      'content':'employee',
+      'key': '1'
+    },{
+      'name': '终端管理',
+      'content':'device',
+      'key': '2'
+    },{
+      'name': '终端类型',
+      'content':'devtype',
+      'key': '3'
+    },{
+      'name': '商家和支付方',
+      'content':'businessandpayer',
+      'key': '4'
+    },{
+      'name': '终端配置文件',
+      'content':'deviceconfig',
+      'key': '5'
+    },{
+      'name': '终端版本型号',
+      'content':'devmodel',
+      'key': '6'
+    },{
+      'name': '终端配件',
+      'content':'devfittings',
+      'key': '7'
+    }]
+  },{
+    'key': 'sub2',
+    'title': '业务操作',
+    'icon': 'book',
+    'contain': []
+  },{
+    'key': 'sub3',
+    'title': '系统运维',
+    'icon': 'hdd',
+    'contain': [{
+      'name': '终端维护',
+      'content':'devmonitor',
+      'key': '10'
+    },{
+      'name': '终端日志',
+      'content':'devlog',
+      'key': '11'
+    },{
+      'name': '操作日志',
+      'content':'operatorlog',
+      'key': '12'
+    }]
+  }];
+</script>
 <body>
   <div id="app"></div>
 </body>
-<!-- <script src="./common.js"></script>
-<script src="./index.js"></script> -->
-<script src="./dist/production/1.0.0/common.js"></script>
-<script src="./dist/production/1.0.0/index.js"></script>
+<script src="./common.js"></script>
+<script src="./index.js"></script>
+<!-- <script src="./dist/production/1.0.0/common.js"></script>
+<script src="./dist/production/1.0.0/index.js"></script> -->
 </html>
 <script>
 </script>
