Signed-off-by: laiwenqi <aqvbzjj@139.com>

--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>一卡通终端服务支撑平台</title>
-  <link rel="stylesheet" type="text/css" href="./index.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
+  <!-- <link rel="stylesheet" type="text/css" href="./index.css" /> -->
+  <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" />
   <!--[if lt IE 10]>
     <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
     <![endif]-->
 </head>
 <script>
-  var isLogin = 0;
+  var isLogin = 1;
   var loginUser = 'admin';
-  var jsversion="v=20160416";
-  var cssversion="v=20160416";
+  var jsversion="v=1.0.0";
+  var cssversion="v=1.0.0";
+  // 默认首页
   var defaultShouye=[{
     'title':'人员管理',
     'key':1,
     'content':'employee'
   }];
+  // 左侧菜单
   var mainMenu= [{
     'key': 'sub1',
     'title': '系统管理',
@@ -82,10 +84,10 @@
 <body>
   <div id="app"></div>
 </body>
-<script src="./common.js"></script>
-<script src="./index.js"></script>
-<!-- <script src="./dist/production/1.0.0/common.js"></script>
-<script src="./dist/production/1.0.0/index.js"></script> -->
+<!-- <script src="./common.js"></script>
+<script src="./index.js"></script> -->
+<script src="./dist/production/1.0.0/common.js"></script>
+<script src="./dist/production/1.0.0/index.js"></script>
 </html>
 <script>
 </script>
