--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>一卡通终端服务支撑平台</title>
-  <!-- <link rel="stylesheet" type="text/css" href="./index.css" /> -->
-  <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" />
+  <link rel="stylesheet" type="text/css" href="./index.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./dist/production/1.0.0/index.css" /> -->
   <!--[if lt IE 10]>
     <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
     <![endif]-->
@@ -19,9 +19,9 @@
   var cssversion="v=1.0.0";
   // 默认首页
   var defaultShouye=[{
-    'title':'人员管理',
-    'key':1,
-    'content':'employee'
+    'title':'终端维护',
+    'key':'10',
+    'content':'devmonitor'
   }];
   // 左侧菜单
   var mainMenu= [{
@@ -29,7 +29,7 @@
     'title': '系统管理',
     'icon': 'laptop',
     'contain': [{
-      'name': '人员管理',
+      'name': '人员管理 (e)',
       'content':'employee',
       'key': '1'
     },{
@@ -37,31 +37,67 @@
       'content':'device',
       'key': '2'
     },{
-      'name': '终端类型',
+      'name': '终端类型 (e)',
       'content':'devtype',
       'key': '3'
     },{
-      'name': '商家和支付方',
+      'name': '商家和支付方 (e)',
       'content':'businessandpayer',
       'key': '4'
     },{
-      'name': '终端配置文件',
+      'name': '终端配置文件 (e)',
       'content':'deviceconfig',
       'key': '5'
     },{
-      'name': '终端版本型号',
+      'name': '终端版本型号 (e)',
       'content':'devmodel',
       'key': '6'
     },{
-      'name': '终端配件',
+      'name': '终端配件 (e)',
       'content':'devfittings',
       'key': '7'
+    },{
+      'name': '卡箱配置 (e)',
+      'content':'container_ka',
+      'key': '8'
+    },{
+      'name': '钞箱配置 (e)',
+      'content':'container_chao',
+      'key': '9'
+    },{
+      'name': '角色管理 (e)',
+      'content':'role',
+      'key': '13'
+    },{
+      'name': '组织管理 (e)',
+      'content':'organization',
+      'key': '14'
     }]
   },{
     'key': 'sub2',
     'title': '业务操作',
     'icon': 'book',
-    'contain': []
+    'contain': [{
+      'name': '异常交易处理 (e)',
+      'content':'abnormal',
+      'key': '15'
+    },{
+      'name': '历史交易查询 (e)',
+      'content':'payment',
+      'key': '16'
+    },{
+      'name': '交易统计查询',
+      'content':'tradeStatistics',
+      'key': '17'
+    },{
+      'name': '收钞结果录入 (e)',
+      'content':'cashbox',
+      'key': '18'
+    },{
+      'name': '收卡结果录入 (e)',
+      'content':'goodsbox',
+      'key': '19'
+    }]
   },{
     'key': 'sub3',
     'title': '系统运维',
@@ -71,11 +107,11 @@
       'content':'devmonitor',
       'key': '10'
     },{
-      'name': '终端日志',
+      'name': '终端日志 (e)',
       'content':'devlog',
       'key': '11'
     },{
-      'name': '操作日志',
+      'name': '操作日志 (e)',
       'content':'operatorlog',
       'key': '12'
     }]
@@ -84,10 +120,10 @@
 <body>
   <div id="app"></div>
 </body>
-<!-- <script src="./common.js"></script>
-<script src="./index.js"></script> -->
-<script src="./dist/production/1.0.0/common.js"></script>
-<script src="./dist/production/1.0.0/index.js"></script>
+<script src="./common.js"></script>
+<script src="./index.js"></script>
+<!-- <script src="./dist/production/1.0.0/common.js"></script>
+<script src="./dist/production/1.0.0/index.js"></script> -->
 </html>
 <script>
 </script>
